network_policy/pcidss/payment/network_policy/01-payment-policy.yaml
# This NetworkPolicy allows traffic only from pods
# in production namespaces allowed to access this data.
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: production-only
  namespace: user-data
spec:
  # Apply to all pods in this namespace.
  podSelector:
    matchLabels: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          role: payment
          tier: production
